[package]
name = "tspressor"
version = "0.1.0"
authors = ["Splamy <splamyn@gmail.com>"]

[lib]
name = "tspressor"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
base64 = "0.10"
clipboard = "0.5"
brotli2 = "0.3"
ts3plugin = { git = "https://github.com/Flakebi/rust-ts3plugin", branch = "v0.3" }
